--- a/nl/dom/chrome/security/csp.properties
+++ b/nl/dom/chrome/security/csp.properties
@@ -65,6 +65,9 @@ scriptFromStringBlocked = Een poging om JavaScript vanuit een string aan te roep
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
 hostNameMightBeKeyword = %1$S wordt als een hostnaam geïnterpreteerd, niet als sleutelwoord. Als u dit een sleutelwoord wilde laten zijn, gebruik dan ‘%2$S’ (omgeven door enkele aanhalingstekens).
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
+notSupportingDirective = Richtlijn '%1$S' wordt niet ondersteund. Richtlijn en waardes worden genegeerd.
 
 # CSP Errors:
 policyURINotAlone = beleids-uri-richtlijn kan alleen zelfstandig voorkomen
